// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafeAreaContext does not render child until inset values are received 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`SafeAreaContext renders 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`SafeAreaContext renders child when inset values are received 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
  testID="safe-area-provider"
/>
`;

exports[`SafeAreaContext renders child when inset values are received 2`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
  testID="safe-area-provider"
>
  <View
    style={
      {
        "height": 100,
        "left": 0,
        "paddingBottom": 4,
        "paddingLeft": 2,
        "paddingRight": 3,
        "paddingTop": 1,
        "top": 0,
        "width": 100,
      }
    }
  />
</View>
`;

exports[`SafeAreaContext supports setting initial insets 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": 100,
        "left": 0,
        "paddingBottom": 4,
        "paddingLeft": 2,
        "paddingRight": 3,
        "paddingTop": 1,
        "top": 0,
        "width": 100,
      }
    }
  />
</View>
`;

exports[`SafeAreaContext uses inner insets 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onSafeAreaInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "height": 16,
          "left": 0,
          "paddingBottom": 5,
          "paddingLeft": 3,
          "paddingRight": 4,
          "paddingTop": 2,
          "top": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`SafeAreaContext uses parent insets when available 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onSafeAreaInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "height": 100,
          "left": 0,
          "paddingBottom": 4,
          "paddingLeft": 2,
          "paddingRight": 3,
          "paddingTop": 1,
          "top": 0,
          "width": 100,
        }
      }
    />
  </View>
</View>
`;
